@@ -1,5 +1,9 @@
 Changes for APR 1.3.0
 
+  *) Add APR_POLLSET_NOCOPY option to apr_pollset API to eliminate
+     O(n)-time lookup in apr_pollset_remove() (currently implemented
+     only for epoll).  [Brian Pane]
+
   *) Add apr_file_buffer_set() and apr_file_buffer_size_get() functions
      to support variable buffer sizes with APR file handles.
      [Colm MacCarthaigh]
